[package]
name = "moonshot-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.16"
ahash = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
futures-util = "0.3" 
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
base64 = "0.13"
pubsub = "0.2.3"
solana-client = "1.18.16"
solana-sdk = "1.18.16"  
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.10.0", default-features = false, features =  ["client", "gateway", "model", "rustls_backend"] }
solana-account-decoder = "1.18.17"
mpl-token-metadata = "4.1.2"
borsh = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = { version = "1.0" }
solana-transaction-status = "1.5.0"
tracing = "0.1.32"
solana-rpc-client-api = "1.18.16"
clap = { version = "4.1.6", features = ["cargo", "derive", "env"] }
futures = "0.3.26"
indicatif = "0.17.7"
jsonrpc-core = "18.0.0"
bs58 = "0.4"

